dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/main.cpp)

AC_PROG_CXX

AC_CHECK_LIB(gd,main,,echo "vec2web requires the gd library to run."; exit 1)
AC_CHECK_LIB(g2,main,,echo "vec2web requires the g2 library to run."; exit 1)
#AC_CHECK_LIB(dxflib,main,,echo "vec2web requires the dxflib library to run."; exit 1)

AC_OUTPUT(Makefile)
